--- a/cart.html
+++ b/cart.html
@@ -40,6 +40,7 @@
         <a class="btn btn-info" href="order.html">Оформить заказ</a>
     </div>
 
+
     <script id="cart-template" type="text/template">
         <% _.each(goods, function(good) { %>
             <tr class="cart-item js-cart-item" data-id="<%= good.id %>">
@@ -75,8 +76,9 @@
         <% }); %>
     </script>
 
-    <script src="js/vendor/jquery.min.js" type="text/javascript"></script>
-\    <script src="js/vendor/underscore.min.js" type="text/javascript"></script>
+    <script src="js/tools/jquery.min.js" type="text/javascript"></script>
+    \
+    <script src="js/tools/underscore.min.js" type="text/javascript"></script>
     <script src="js/modules/cart.js" type="text/javascript"></script>
     <script src="js/modules/main.js" type="text/javascript"></script>
 </body>
