--- a/index.html
+++ b/index.html
@@ -8,28 +8,181 @@
     <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 <body data-page="catalog">
-    <div class="container">
+<header>
+    <nav id="header-nav" class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a href="index.html" class="pull-left visible-md visible-lg">
+                    <div id="logo-img"></div>
+                </a>
 
-        <ul class="nav nav-pills">
-            <li class="active"><a href="index.html">Каталог</a></li>
-            <li><a href="catalog.html">Каталог с фильтрами</a></li>
-            <li><a href="catalog-pag.html">Каталог с пагинацией</a></li>
-            <li id="compare-tab"><a href="compare.html">Сравнение товаров<span class="badge"></span></a></li>
-            <li><a href="cart.html">Корзина<span id="total-cart-count" class="badge"></span></a></li>
-            <li><a href="order.html">Оформление заказа</a></li>
-        </ul>
-        <br />
+                <div class="navbar-brand">
+                    <a href="index.html"><h1>My-store</h1></a>
+                </div>
+
+                <button id="navbarToggle" type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                        data-target="#collapsable-nav" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+
+            <div id="collapsable-nav" class="collapse navbar-collapse">
+                <ul id="nav-list" class="nav navbar-nav navbar-right nav-pills">
+                    <li>
+                        <a href="index.html">
+                            <br class="hidden-xs"> Main</a>
+                    </li>
+                    <li class="visible-xs active">
+                        <a href="#">
+                            <br class="hidden-xs"> Catalogue</a>
+                    </li>
+                    <li>
+                        <a href="auth.html">
+                            <br class="hidden-xs"> Sign in</a>
+                    </li>
+                    <li>
+                        <a href="reg.html">
+                            <br class="hidden-xs"> Log in</a>
+                    </li>
+                    <li id="phone" class="hidden-xs">
+                        <a href="tel:410-602-5008">
+                            <span>123-456-7890</span></a>
+                        <div>* We deliver</div>
+                    </li>
+                    <li>
+                        <a href="#myModalBox" id="btn">
+                            <!--                            <br> Cart-->
+                            <span class="glyphicon glyphicon-shopping-cart"></span>
+                            <span id="total-cart-count" class="badge">
+                        </span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
+    <div class="container">
         <ul id="goods" class="list-unstyled">
             <img src="img/loading.gif" alt="" />
         </ul>
     </div>
+<footer class="panel-footer">
+    <div class="container">
+        <div class="row">
+            <section id="hours" class="col-sm-4">
+                <span>Hours:</span><br>
+                Sun-Thurs: 11:15am - 10:00pm<br>
+                Fri: 11:15am - 2:30pm<br>
+                Saturday Closed
+                <hr class="visible-xs">
+            </section>
+            <section id="address" class="col-sm-4">
+                <span>Address:</span><br>
+                2 Hryhoriya Skovorody<br>
+                Kyiv, 04655
+                <p>* Delivery area within 3-4 miles, with minimum order of $20 plus $3 charge for all deliveries.</p>
+                <hr class="visible-xs">
+            </section>
+            <section id="testimonials" class="col-sm-4">
+                <p>Git: <a href="https://github.com/MyPersonalGitRepositories">My repositories</a></p>
+                <p>Contact information: <a href="mailto:p.maxsym@gmail.com">p.maxsym@gmail.com</a></p>
+            </section>
+        </div>
+        <div class="text-center">&copy; Copyright My-Store 2019</div>
+    </div>
+    <div class="modal fade" id="myModalBox" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+         aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="table-responsive">
+                        <table class="table table-hover table-bordered">
+                            <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Name</th>
+                                <th>Price</th>
+                                <th>Amount</th>
+                                <th>Sum</th>
+                                <th></th>
+                            </tr>
+                            </thead>
+                            <tbody id="cart">
+                            <!--                        <tr><td colspan="6"><img src="img/loading.gif" alt="" /></td></tr>-->
+                            </tbody>
+                        </table>
+                    </div>
+                    <div>To pay: <span id="total-cart-summa">0</span> hrn</div>
+                    <br/>
+                    <a class="btn btn-info" href="order.html">Place your order</a>
+                </div>
 
+                <script id="cart-template" type="text/template">
+                    <% _.each(goods, function(good) { %>
+                    <tr class="cart-item js-cart-item" data-id="<%= good.id %>">
+                        <td><%= good.id %></td>
+                        <td><%- good.name %></td>
+                        <td><%= good.price %> руб.</td>
+                        <td>
+                                <span
+                                        class="cart-item__btn-dec-count js-change-count"
+                                        title="Уменьшить на 1"
+                                        data-id="<%= good.id %>"
+                                        data-delta="-1"
+                                >
+                                    <span class="glyphicon glyphicon-minus"></span>
+                                </span>
+                            <span class="js-count"><%= good.count %></span>
+                            <span
+                                    class="cart-item__btn-inc-count js-change-count"
+                                    title="Увеличить на 1"
+                                    data-id="<%= good.id %>"
+                                    data-delta="1"
+                            >
+                                    <span class="glyphicon glyphicon-plus"></span>
+                                </span>
+                        </td>
+                        <td><span class="js-summa"><%= good.count * good.price %></span> hrn.</td>
+                        <td>
+                                <span class="cart-item__btn-remove js-remove-from-cart" title="Удалить из корзины"
+                                      data-id="<%= good.id %>">
+                                    <span class="glyphicon glyphicon-remove"></span>
+                                </span>
+                        </td>
+                    </tr>
+                    <% }); %>
+                </script>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
     <script id="catalog-template" type="text/template">
         <% _.each(goods, function(good) { %>
             <li class="good-item row">
                 <div class="col-md-4">
                     <img class="good-item__img" src="<%- good.img %>" />
                 </div>
+                <!--                TODO MAKE ANOTHER DISPLAY OF ITEMS-->
                 <div class="col-md-8">
                     <div class="good-item__id">Артикул <%= good.id %></div>
                     <div class="good-item__name"><%- good.name %></div>
@@ -45,8 +198,10 @@
         <% }); %>
     </script>
 
-    <script src="js/vendor/jquery.min.js" type="text/javascript"></script>
-    <script src="js/vendor/underscore.min.js" type="text/javascript"></script>
+<script src="js/tools/jquery.min.js" type="text/javascript"></script>
+<script src="js/tools/npm.js" type="text/javascript"></script>
+<script src="js/tools/bootstrap.js" type="text/javascript"></script>
+<script src="js/tools/underscore.min.js" type="text/javascript"></script>
     <script src="js/modules/catalog.js" type="text/javascript"></script>
     <script src="js/modules/cart.js" type="text/javascript"></script>
     <script src="js/modules/main.js" type="text/javascript"></script>
