--- a/cart.html
+++ b/cart.html
@@ -5,7 +5,7 @@
     <title>Webdevkin. Интернет-магазин. Корзина</title>
     <link href='https://fonts.googleapis.com/css?family=Ubuntu:400,700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="css/main.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body data-page="cart">
     <div class="container">
