--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Webdevkin. Интернет-магазин. Главная</title>
     <link href='https://fonts.googleapis.com/css?family=Ubuntu:400,700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="css/main.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body data-page="catalog">
 <header>
@@ -70,7 +70,14 @@
         </div>
     </nav>
 </header>
-    <div class="container">
+<div class="container-fluid">
+    <div class="text-center  text ">
+        <h1>Smart-watch</h1>
+    </div>
+    <hr class="solid">
+    <div class="text-left">
+        <h2>Apple</h2>
+    </div>
         <ul id="goods" class="list-unstyled">
             <img src="img/loading.gif" alt="" />
         </ul>
@@ -199,11 +206,10 @@
     </script>
 
 <script src="js/tools/jquery.min.js" type="text/javascript"></script>
-<script src="js/tools/npm.js" type="text/javascript"></script>
 <script src="js/tools/bootstrap.js" type="text/javascript"></script>
 <script src="js/tools/underscore.min.js" type="text/javascript"></script>
-    <script src="js/modules/catalog.js" type="text/javascript"></script>
-    <script src="js/modules/cart.js" type="text/javascript"></script>
-    <script src="js/modules/main.js" type="text/javascript"></script>
+<script src="js/modules/catalog.js" type="text/javascript"></script>
+<script src="js/modules/cart.js" type="text/javascript"></script>
+<script src="js/modules/main.js" type="text/javascript"></script>
 </body>
 </html>
