--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Webdevkin. Интернет-магазин. Главная</title>
-    <link href='https://fonts.googleapis.com/css?family=Ubuntu:400,700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>My Web-site</title>
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
@@ -56,15 +58,9 @@
                         <a href="#myModalBox" id="btn">
                             <!--                            <br> Cart-->
                             <span class="glyphicon glyphicon-shopping-cart"></span>
-                            <span id="total-cart-count" class="badge">
-                        </span>
+                            <span id="total-cart-count" class="badge"></span>
                         </a>
                     </li>
-                </ul>
-            </div>
-            <div>
-                <ul>
-
                 </ul>
             </div>
         </div>
@@ -186,11 +182,11 @@
     <script id="catalog-template" type="text/template">
         <% _.each(goods, function(good) { %>
             <li class="good-item row">
-                <div class="col-md-4">
+                <div>
                     <img class="good-item__img" src="<%- good.img %>" />
                 </div>
                 <!--                TODO MAKE ANOTHER DISPLAY OF ITEMS-->
-                <div class="col-md-8">
+                <div>
                     <div class="good-item__id">Артикул <%= good.id %></div>
                     <div class="good-item__name"><%- good.name %></div>
                     <div class="good-item__price"><%= good.price %> руб.</div>
