--- a/cart.html
+++ b/cart.html
@@ -22,11 +22,11 @@
             <table class="table table-hover table-bordered">
                 <thead>
                     <tr>
-                        <th>Артикул</th>
-                        <th>Название</th>
-                        <th>Цена</th>
-                        <th>Количество</th>
-                        <th>Сумма</th>
+                        <th>ID</th>
+                        <th>Name</th>
+                        <th>Price</th>
+                        <th>Amount</th>
+                        <th>Sum</th>
                         <th></th>
                     </tr>
                 </thead>
@@ -35,9 +35,9 @@
                 </tbody>
             </table>
         </div>
-        <div>Итого: <span id="total-cart-summa">65000</span> руб.</div>
+        <div>Итого: <span id="total-cart-summa">0</span> hrn.</div>
         <br />
-        <a class="btn btn-info" href="order.html">Оформить заказ</a>
+        <a class="btn btn-info" href="order.html">Place my order</a>
     </div>
 
 
