--- a/index.html
+++ b/index.html
@@ -74,10 +74,14 @@
     <div class="text-left">
         <h2>Apple</h2>
     </div>
-        <ul id="goods" class="list-unstyled">
-            <img src="img/loading.gif" alt="" />
-        </ul>
+    <div class="text-center">
+        <div>
+            <div id="goods">
+                <img src="img/loading.gif" alt=""/>
+            </div>
+        </div>
     </div>
+</div>
 <footer class="panel-footer">
     <div class="container">
         <div class="row">
@@ -103,7 +107,7 @@
         <div class="text-center">&copy; Copyright My-Store 2019</div>
     </div>
     <div class="modal fade" id="myModalBox" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-         aria-hidden="true">
+         aria-hidden="true" data-page="cart">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -140,11 +144,11 @@
                     <tr class="cart-item js-cart-item" data-id="<%= good.id %>">
                         <td><%= good.id %></td>
                         <td><%- good.name %></td>
-                        <td><%= good.price %> руб.</td>
+                        <td><%= good.price %> hrn.</td>
                         <td>
                                 <span
                                         class="cart-item__btn-dec-count js-change-count"
-                                        title="Уменьшить на 1"
+                                        title="Decrease on 1"
                                         data-id="<%= good.id %>"
                                         data-delta="-1"
                                 >
@@ -153,7 +157,7 @@
                             <span class="js-count"><%= good.count %></span>
                             <span
                                     class="cart-item__btn-inc-count js-change-count"
-                                    title="Увеличить на 1"
+                                    title="Increase on 1"
                                     data-id="<%= good.id %>"
                                     data-delta="1"
                             >
@@ -162,7 +166,7 @@
                         </td>
                         <td><span class="js-summa"><%= good.count * good.price %></span> hrn.</td>
                         <td>
-                                <span class="cart-item__btn-remove js-remove-from-cart" title="Удалить из корзины"
+                                <span class="cart-item__btn-remove js-remove-from-cart" title="Delete from cart"
                                       data-id="<%= good.id %>">
                                     <span class="glyphicon glyphicon-remove"></span>
                                 </span>
@@ -172,7 +176,8 @@
                 </script>
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <a class="btn btn-success" href="index.html"> Close</a>
+                    <!--                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>-->
                     <button type="button" class="btn btn-primary">Save changes</button>
                 </div>
             </div>
@@ -181,23 +186,26 @@
 </footer>
     <script id="catalog-template" type="text/template">
         <% _.each(goods, function(good) { %>
-            <li class="good-item row">
+        <div class="good-item">
+            <div class="description">
                 <div>
                     <img class="good-item__img" src="<%- good.img %>" />
                 </div>
                 <!--                TODO MAKE ANOTHER DISPLAY OF ITEMS-->
                 <div>
-                    <div class="good-item__id">Артикул <%= good.id %></div>
+                    <div class="good-item__id">ID <%= good.id %></div>
                     <div class="good-item__name"><%- good.name %></div>
-                    <div class="good-item__price"><%= good.price %> руб.</div>
-                    <button 
-                        class="good-item__btn-add btn btn-info btn-sm js-add-to-cart"
-                        data-id="<%= good.id %>"
-                        data-name="<%- good.name %>"
-                        data-price="<%= good.price %>"
-                    >Добавить в корзину</button>
+                    <div class="good-item__price"><%= good.price %> hrn.</div>
+                    <button
+                            class="good-item__btn-add btn btn-info btn-sm js-add-to-cart"
+                            data-id="<%= good.id %>"
+                            data-name="<%- good.name %>"
+                            data-price="<%= good.price %>"
+                    >Add to cart
+                    </button>
                 </div>
-            </li>
+            </div>
+        </div>
         <% }); %>
     </script>
 
