--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body data-page="catalog">
+<div class="wrapper">
+    <div class="content">
 <header>
     <nav id="header-nav" class="navbar navbar-default">
         <div class="container-fluid">
@@ -32,13 +34,13 @@
             </div>
 
             <div id="collapsable-nav" class="collapse navbar-collapse">
-                <ul id="nav-list" class="nav navbar-nav navbar-right nav-pills">
+                <ul id="nav-list" class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="index.html">
+                        <a href="main.html">
                             <br class="hidden-xs"> Main</a>
                     </li>
                     <li class="visible-xs active">
-                        <a href="#">
+                        <a href="index.html">
                             <br class="hidden-xs"> Catalogue</a>
                     </li>
                     <li>
@@ -56,7 +58,6 @@
                     </li>
                     <li>
                         <a href="#myModalBox" id="btn">
-                            <!--                            <br> Cart-->
                             <span class="glyphicon glyphicon-shopping-cart"></span>
                             <span id="total-cart-count" class="badge"></span>
                         </a>
@@ -82,6 +83,7 @@
         </div>
     </div>
 </div>
+    </div>
 <footer class="panel-footer">
     <div class="container">
         <div class="row">
@@ -130,7 +132,9 @@
                             </tr>
                             </thead>
                             <tbody id="cart">
-                            <!--                        <tr><td colspan="6"><img src="img/loading.gif" alt="" /></td></tr>-->
+                            <tr>
+                                <td colspan="6"><img src="img/loading.gif" alt=""/></td>
+                            </tr>
                             </tbody>
                         </table>
                     </div>
@@ -176,14 +180,14 @@
                 </script>
 
                 <div class="modal-footer">
-                    <a class="btn btn-success" href="index.html"> Close</a>
-                    <!--                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>-->
+                    <button type="button" class="btn btn-success" data-dismiss="modal">Close</button>
                     <button type="button" class="btn btn-primary">Save changes</button>
                 </div>
             </div>
         </div>
     </div>
 </footer>
+</div>
     <script id="catalog-template" type="text/template">
         <% _.each(goods, function(good) { %>
         <div class="good-item">
@@ -196,13 +200,14 @@
                     <div class="good-item__id">ID <%= good.id %></div>
                     <div class="good-item__name"><%- good.name %></div>
                     <div class="good-item__price"><%= good.price %> hrn.</div>
-                    <button
-                            class="good-item__btn-add btn btn-info btn-sm js-add-to-cart"
+                    <a
+                            href="index.html"
+                            class="good-item__btn-add btn btn-success btn-lg js-add-to-cart"
                             data-id="<%= good.id %>"
                             data-name="<%- good.name %>"
                             data-price="<%= good.price %>"
                     >Add to cart
-                    </button>
+                    </a>
                 </div>
             </div>
         </div>
