--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             </div>
         </div>
     </div>
+    <hr class="solid">
 </div>
     </div>
 <footer class="panel-footer">
@@ -113,10 +114,10 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                    <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                    <h4 class="modal-title text-center" id="myModalLabel">Cart</h4>
+                    <!--                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
+                    <!--                    <span aria-hidden="true">&times;</span>-->
+                    <!--                </button>-->
                 </div>
                 <div class="modal-body">
                     <div class="table-responsive">
